# entries-cli

./: .gitignore  README.md  pyproject.toml
source/entities/: __init__.py  entry.py
source/frameworks_and_devices/cli/: __init__.py  config.py
source/frameworks_and_devices/database/: __init__.py  connection.py  cursor.py  engine.py  session.py
source/interface_adapters/controllers/: __init__.py  entry.py
