[tool.poetry]
name = "entries-cli"
version = "0.1.0"
description = ""
authors = ["Marco Carmona <marcocarmonadev@outlook.com>"]
license = "MIT"
readme = "README.md"
packages = [{ "include" = "source" }]


[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.12.3"
sqlalchemy = "^2.0.31"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
entries = "source.frameworks_and_devices.cli:app"
